--- a/src/01-cart/styles/CartList.scss
+++ b/src/01-cart/styles/CartList.scss
@@ -13,7 +13,7 @@ $light-box-shadow: rgba(53, 53, 53, 0.75);
 $min-width: 390px;
 $min-height: 400px;
 $wave-height: 40px;
-$progress-width: 33%;
+$progress-width: 35%;
 
 $font-family: Arial, Helvetica, sans-serif;
 
@@ -69,8 +69,22 @@ $border-radius-button: 8px;
             display: none;
 
             .y-Cart-icon {
-                width: 30px;
+                width: 36px;
+                height: 36px;
+                padding: 1px;
                 margin-right: 10px;
+                border-radius: 50%;
+                border: $border-sm;
+                animation: y-cart-list-icon 1.5s 1 linear;
+                @keyframes y-cart-list-icon {
+                    0% {
+                        transform: rotate(0deg);
+                    }
+
+                    100% {
+                        transform: rotate(360deg);
+                    }
+                }
                 img {
                     width: 100%;
                 }
@@ -196,13 +210,13 @@ $border-radius-button: 8px;
                 .y-Cart-shop-cover{
                     width: 100%;
                     height: 180px;
-                    display: none;
+                    // display: none;
                     
                     img {
                         width: 100%;
                         height: 100%;
                         object-fit: cover;
-                        // object-position: 50% 50%;
+                        object-position: 50% 50%;
                     }
                 }
 
@@ -240,7 +254,7 @@ $border-radius-button: 8px;
     
                         }
                         .y-Cart-shop-time {
-    
+                        margin-bottom: 0;
                         }
 
                     }
@@ -252,7 +266,7 @@ $border-radius-button: 8px;
                     padding: 25px 20px;
                     // border-radius: $border-radius-button;
                     position: relative;
-                    margin-bottom: 15px;
+                    margin-bottom: 0;
                     
                     .y-Cart-pickup-top {
                         width: 100%;
@@ -280,7 +294,7 @@ $border-radius-button: 8px;
                     }
 
                     .y-Cart-pickup-border {
-                            width: 128px;
+                            width: 100%;
                             height: 80px;
                             // aspect-ratio: 1/1;
                             position: absolute;
@@ -459,8 +473,12 @@ $border-radius-button: 8px;
                 align-items: center;
     
                 .y-Cart-icon {
-                    // display: none;
-                    width: 48px;
+                    width: 45px;
+                    height: 45px;
+                    border: $border-lg;
+                    padding: 2px;
+                    margin-right: 12px;
+                    background-color: #fdefc2;
                     img {
                         width: 100%;
                     }
@@ -550,6 +568,7 @@ $border-radius-button: 8px;
 
                     .y-Cart-shop-cover{
                         width: 32%;
+                        height: 240px;
                         object-fit: cover;
                         // object-position: 0% 0%;
                         min-height: 240px;
@@ -566,7 +585,7 @@ $border-radius-button: 8px;
                         width: 34%;
                         border-bottom: none;
                         border-right: $border-lg;
-                        padding: 25px 30px;
+                        padding: 25px 30px 15px;
                         margin-bottom: 0;
                         flex-direction: column;
 
@@ -615,7 +634,7 @@ $border-radius-button: 8px;
                         // justify-content: space-between;
     
                         .y-Cart-pickup-top {
-
+                            height: 72px;
                             .y-Cart-pickup-title {
                                 font-size: 28px;
                                 line-height: 40px;
@@ -669,6 +688,9 @@ $border-radius-button: 8px;
                                     display: block;
                                     font-weight: bold;
                                 }
+                                .y-Cart-pickup-info-lg:hover {
+                                    cursor: pointer;
+                                }
                             }
                         }
                         
@@ -684,11 +706,12 @@ $border-radius-button: 8px;
             .y-Cart-details {
                 position: relative;
                 margin-bottom: 80px;
+                padding-top: 40px;
 
                 .y-empty-cart-wrap {
                     display: block;
                     position: absolute;
-                    top: 0;
+                    top: 5px;
                     right: 10px;
                 }
                 
@@ -827,7 +850,7 @@ $border-radius-button: 8px;
                     .y-Cart-rec-row {
                         width: 100%;
                         display: flex;
-                        justify-content: space-between;
+                        // justify-content: space-between;
                         .y-Cart-rec-wrap {
                             width: 25%;
                             padding: 10px 15px;
