--- a/src/01-cart/styles/EmptyCartBtn.scss
+++ b/src/01-cart/styles/EmptyCartBtn.scss
@@ -1,5 +1,5 @@
 $main-yellow: #FAD249;
-$main-blue: #2B325C;
+$main-blue: #113F75;
 $main-text: #5E5E5E;
 
 $btn-red: #ED4743;
@@ -33,20 +33,24 @@ $border-radius-button: 8px;
 .y-empty-cart-border {
     border-radius: $border-radius-button;
     border: $border-white-sm;
-    background-color: $btn-pink;
-    padding: 2px 20px;
-    height: 50px;
+    background-color: $main-blue;
+    padding: 2px 16px;
+    height: 40px;
     display: none;
 
     .y-empty-cart-icon {
         width: 20px;
         aspect-ratio: 1/1;
 
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-        }  
+        .fa-trash-can {
+        font-size: 18px;
+        color: white;  
+        }
+        // img {
+        //     width: 100%;
+        //     height: 100%;
+        //     object-fit: contain;
+        // }  
     }
     
     .y-empty-cart {
@@ -54,6 +58,16 @@ $border-radius-button: 8px;
         font-size: 14px;
         font-weight: bold;
         letter-spacing: 2px;
+    }
+}
+.y-empty-cart-border:hover {
+    background-color: $main-yellow;
+    cursor: pointer;
+
+    .y-empty-cart-icon {
+        .fa-trash-can {
+            color: $main-blue;
+        }
     }
 }
 
@@ -64,13 +78,18 @@ $border-radius-button: 8px;
         align-items: center;
         border-radius: $border-radius-card;
         border: $border-white-lg;
-        padding: 8px 35px;
-        height: 60px;
+        padding: 8px 24px;
+        height: 50px;
 
         .y-empty-cart-icon {
-            img {
-                
+            margin-right: 8px;
+            .fa-trash-can {
+                font-size: 22px; 
+                color: $main-yellow;  
             }
+            // img {
+                
+            // }
         }
 
         .y-empty-cart {
