--- a/src/01-cart/styles/RecMerch.scss
+++ b/src/01-cart/styles/RecMerch.scss
@@ -58,7 +58,7 @@ $border-radius-button: 8px;
             font-size: 24px;
             letter-spacing: 2px;
             font-weight: bold;
-            margin-bottom: 24px;
+            margin-bottom: 20px;
             flex-grow: 1;
         }
     
@@ -72,6 +72,7 @@ $border-radius-button: 8px;
             .y-rec-merch-price {
                 text-decoration: line-through;
                 font-size: 20px;
+                font-weight: bold;
             }
     
             .y-rec-merch-sale {
@@ -123,6 +124,119 @@ $border-radius-button: 8px;
                     width: 100%;
                     // height: 100%;
                     object-fit: cover;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 391px) {
+    .y-rec-merch-border {
+        border: $border-lg;
+        max-width: 295px;
+        margin: 0 auto;
+    
+        .y-rec-merch-pic { 
+            border-bottom:  $border-lg;
+            max-height: 280px;
+            background-color: #ccc;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                vertical-align: top;
+    
+            }
+        }
+    
+        .y-rec-merch-info {
+            width: 100%;
+            padding: 24px 20px;
+            background-color: #fff;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: stretch;
+    
+            .y-rec-merch-name {
+                font-size: 24px;
+                letter-spacing: 2px;
+                font-weight: bold;
+                margin-bottom: 16px;
+                flex-grow: 1;
+            }
+            .y-rec-merch-name:hover {
+                cursor: pointer;
+            }
+        
+            .y-rec-merch-bottom {
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 10px;
+    
+                .y-rec-merch-price {
+                    text-decoration: line-through;
+                    font-size: 22px;
+                }
+        
+                .y-rec-merch-sale {
+                    font-weight: bold;
+                    font-size: 22px;
+                    color: $btn-red;
+                }
+        
+                .y-rec-merch-quantity {
+                    
+                    select {
+                        background-color: $main-yellow;
+                        color: $main-blue;
+                        width: 65px;
+                        padding: 8px 10px;
+                        // padding-right: 8px;
+                        position: relative;
+                        border: $border-lg;
+                        // box-shadow: $btn-shadow-lg;
+                        border-radius: $border-radius-button;
+                        appearance:none;
+                        -moz-appearance:none;
+                        -webkit-appearance:none;
+                        background: {
+                            image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%3E%3Cpath%20fill%3D%22%23ffffff%22%20d%3D%22M7%2010l5%205%205-5z%22%2F%3E%3C%2Fsvg%3E"), linear-gradient($main-yellow, $main-yellow);
+                            image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%3E%3Cpath%20fill%3D%22%23ffffff%22%20d%3D%22M7%2010l5%205%205-5z%22%2F%3E%3C%2Fsvg%3E"), -webkit-linear-gradient($main-yellow, $main-yellow);
+                            image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%3E%3Cpath%20fill%3D%22%23ffffff%22%20d%3D%22M7%2010l5%205%205-5z%22%2F%3E%3C%2Fsvg%3E"), -moz-linear-gradient($main-yellow, $main-yellow);
+                            position: right 4px top 50%, 0 0;
+                            size: contain, cover;
+                            repeat: no-repeat, repeat;
+        
+                        }
+                        
+                        option {
+                            appearance: none;
+                            // font-weight: bold;
+                        }
+                    }
+                }
+                .y-rec-merch-quantity:hover {
+                    cursor: pointer;
+                }
+        
+                .y-rec-merch-cart {
+                    width: 37px;
+                    height: 37px;
+                    background-color: $main-yellow;
+                    border-radius: $border-radius-button;
+                    border: $border-lg;
+    
+                    img {
+                        width: 100%;
+                        // height: 100%;
+                        object-fit: cover;
+                    }
+                }
+                .y-rec-merch-cart:hover {
+                    cursor: pointer;
                 }
             }
         }
