--- a/src/00-homepage/styles/AboutUs.scss
+++ b/src/00-homepage/styles/AboutUs.scss
@@ -33,6 +33,9 @@ $main-border-radius: 8px;
     width: 150px;
     height: 350px;
     margin: auto;
+    // @media (max-width: 390px) {
+    //   width: ;
+    // }
     // overflow: hidden;
   }
   video {
