--- a/src/06-event/components/left/left.scss
+++ b/src/06-event/components/left/left.scss
@@ -78,11 +78,11 @@ body {
       }
 
       li {
+        cursor: pointer;
         .j-hidehide {
           opacity: 0;
         }
         img {
-         
           @media (max-width: 390px) {
             display: none;
           }
