--- a/src/06-event/components/right/Timetable.scss
+++ b/src/06-event/components/right/Timetable.scss
@@ -231,6 +231,7 @@ $colorLine: #cecece;
           // outline: 1px solid black;
           // background-color: $colorWhite;
           // transition: .3s;
+          cursor: pointer;
           margin: auto;
           margin-top: 12px;
           width: 230px;
