--- a/src/04-product/components/style/ProductFilter.scss
+++ b/src/04-product/components/style/ProductFilter.scss
@@ -49,7 +49,7 @@ $main-border-radius: 8px;
   margin-top: 30px;
   display: flex;
   justify-content: center;
-  .a-iconAladdinWrapper .blueTheme {
+  .a-iconAladdinWrapper {
     width: 200px;
     height: 200px;
     border: 8px solid #87efbd;
@@ -64,7 +64,7 @@ $main-border-radius: 8px;
     }
   }
 }
-#yellowTheme .a-iconAvengersWrapper  {
+.a-iconAvengersWrapper {
   width: 200px;
   height: 200px;
   border: 8px solid $secondary-blue;
@@ -81,7 +81,134 @@ $main-border-radius: 8px;
 }
 
 //CategoryFilter
-#blueTheme .a-productFilterWrapper  {
+.blueTheme {
+  border: 8px solid #87efbd;     
+  background-color: $secondary-blue;
+}
+.yellowTheme {
+
+}
+.a-productFilterWrapper {
+  display: flex;
+  justify-content: center;
+  .a-category {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .a-categoryWrapper {
+      width: 840px;
+      display: flex;
+      align-items: flex-end;
+      flex-wrap: wrap;
+      .a-categoryContentWapper {
+        cursor: pointer;
+        .a-categoryFIlter {
+          @extend %a-flex;
+          flex-direction: column;
+          margin-top: 30px;
+          .a-iconWrapper {
+            width: 140px;
+            height: 140px;
+            border-radius: 50%;
+            overflow: hidden;   
+            margin: 10px 10px 5px 10px;
+            @extend %a-flex;
+            .a-icon {
+              width: 100px;
+              object-fit: cover;
+            }
+          }
+         
+        
+
+          
+          .a-categoryIconWrapper {
+            display: flex;
+            justify-content: center;
+            .a-categoryInput {
+              display: none;
+              background-color: transparent;
+            }
+            // input:checked + a-iconsWrapper {
+            //   border: 8px solid $secondary-blue;
+            //   background-color: $main-yellow;
+            // }
+            .a-categoryName {
+              text-align: center;
+              font-size: 20px;
+              color: $secondary-blue;
+              padding-left: 5px;
+            }
+          }
+          // .a-categoryIconWrapper:hover {
+          //   border: 8px solid $secondary-blue;
+          //   background-color: $main-yellow;
+          // }
+        }
+      }
+    }
+  }
+}
+
+.a-productFilterWrapper {
+  display: flex;
+  justify-content: center;
+  .a-category {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .a-categoryWrapper {
+      width: 840px;
+      display: flex;
+      align-items: flex-end;
+      flex-wrap: wrap;
+      .a-categoryContentWapper {
+        cursor: pointer;
+        .a-categoryFIlter {
+          @extend %a-flex;
+          flex-direction: column;
+          margin-top: 30px;
+          .a-iconWrapper {
+            width: 140px;
+            height: 140px;
+            border-radius: 50%;
+            border: 8px solid $secondary-blue;
+            overflow: hidden;
+            background-color: $main-yellow;
+            margin: 10px 10px 5px 10px;
+            @extend %a-flex;
+            .a-icon {
+              width: 100px;
+              object-fit: cover;
+            }
+          }
+
+          // .a-categoryIconWrapper {
+          //   display: flex;
+          //   justify-content: center;
+          //   .a-categoryInput {
+          //     display: none;
+          //     background-color: transparent;
+          //   }
+          //   input:checked + a-iconsWrapper {
+          //     border: 8px solid $secondary-blue;
+          //     background-color: $main-yellow;
+          //   }
+          //   .a-categoryName {
+          //     text-align: center;
+          //     font-size: 20px;
+          //     color: $secondary-blue;
+          //     padding-left: 5px;
+          //   }
+          // }
+        }
+      }
+    }
+  }
+}
+.a-productFilterWrapper blueTheme {
   display: flex;
   justify-content: center;
   .a-category {
@@ -122,10 +249,10 @@ $main-border-radius: 8px;
               display: none;
               background-color: transparent;
             }
-            input:checked + a-iconsWrapper {
-              border: 8px solid $secondary-blue;
-              background-color: $main-yellow;
-            }
+            // input:checked + a-iconsWrapper {
+            //   border: 8px solid $secondary-blue;
+            //   background-color: $main-yellow;
+            // }
             .a-categoryName {
               text-align: center;
               font-size: 20px;
@@ -133,13 +260,21 @@ $main-border-radius: 8px;
               padding-left: 5px;
             }
           }
+          .a-categoryIconWrapper:hover {
+            border: 8px solid $secondary-blue;
+            background-color: $main-yellow;
+          }
+          // .a-productFilterContent:hover {
+          //   border: 8px solid $secondary-blue;
+          //   background-color: $main-yellow;
+          // }
         }
       }
     }
   }
 }
 
-#yellowTheme .a-productFilterWrapper {
+.a-productFilterWrapper yellowTheme {
   display: flex;
   justify-content: center;
   .a-category {
@@ -196,29 +331,8 @@ $main-border-radius: 8px;
     }
   }
 }
-// .a-iconWrapper:hover {
-//   border: 8px solid $secondary-blue;
-//   background-color: $main-yellow;
-// }
 
-// .a-iconWrapper {
-//   width: 140px;
-//   height: 140px;
-//   border-radius: 50%;
-//   border: 8px solid $secondary-blue;
-//   overflow: hidden;
-//   background-color: $main-yellow;
-//   margin: 20px 10px 5px 10px;
-//   @extend %a-flex;
-//   .a-icon {
-//     width: 100px;
-//     object-fit: cover;
-//   }
-// }
-// .a-iconWrapper:hover {
-//   border: 8px solid #87efbd;
-//   background-color: $secondary-blue;
-// }
+
 
 .a-filterButton {
   width: 200px;
@@ -291,7 +405,7 @@ $main-border-radius: 8px;
           color: #fff;
           cursor: pointer;
         }
-        .a-optionWrapper .a-checkboxWrapper:hover {
+        .a-optionWrapper {
           background-color: $green;
           color: #fff;
           cursor: pointer;
