--- a/src/04-product/components/style/ProductComment.scss
+++ b/src/04-product/components/style/ProductComment.scss
@@ -87,12 +87,12 @@ $main-border-radius: 8px;
 
 .a-productUserComment {
     width: 420px;
-    position: relative;
+    // position: relative;
     // background-color: $secondary-yellow;
     .a-productRating {
-      position: absolute;
-      top: -205px;;
-      left: 230px;
+      // position: absolute;
+      // top: -205px;;
+      // left: 230px;
       font-size: 60px;
       font-weight: 600;
       color: $main-yellow;
