--- a/src/04-product/components/style/RecommendCard.scss
+++ b/src/04-product/components/style/RecommendCard.scss
@@ -74,9 +74,9 @@ input::-webkit-inner-spin-button {
     }
   }
   .a-recommendText {
-    color: $secondary-blue;
-    font-size: 16px;
-    font-weight: 450;
+    color: $main-blue;
+    font-size: 22px;
+    font-weight: 500;
     padding-left: 5px;
   }
 }
