--- a/src/01-cart/styles/TapPay.scss
+++ b/src/01-cart/styles/TapPay.scss
@@ -1,9 +1,71 @@
+$main-yellow: #FAD249;
+$main-blue: #113F75;
+$main-text: #5E5E5E;
+
+$border-lg: $main-blue 3px solid;
+$border-sm: $main-blue 2px solid;
+
+$text-shadow: #E4E4E4 2px 2px;
+$btn-shadow-lg: 6px 6px $main-blue;
+$btn-shadow-sm: 2px 2px $main-blue;
+$light-box-shadow: rgba(53, 53, 53, 0.75);
+
+$min-width: 390px;
+$min-height: 400px;
+$wave-height: 40px;
+$progress-width: 100%;
+
+$font-family: Arial, Helvetica, sans-serif;
+
+$border-radius-card: 10px;
+$border-radius-button: 8px;
+
 .y-tappay-container {
-    .tpfield {
-        height: 40px;
-        width: 300px;
-        border: 1px solid gray;
-        margin: 5px 0;
-        padding: 5px;
+    position: relative;
+
+    .y-tappay-nav-bg {
+        width: 100%;
+        background-color: #fff;
+        position: fixed;
+        z-index: 999;
+        top: 0;
+        left: 0;
+        right: 0;
+        .y-Cart-wave-base {
+            width: 100%;
+            height: 20px;
+            background-color: $main-yellow;
+        }
+    }
+
+    .y-tappay-form-wrap {
+        width: 100%;
+        margin: 0 auto;
+        // padding: 0 20px;
+        padding-top: 90px;
+        position: relative;
+
+        .y-tappay-form {
+            label {
+                display: block;
+                
+            }
+            input {
+                display: block;
+                height: 40px;
+                width: 300px;
+                border: 1px solid rgb(175, 175, 175);
+                margin: 5px 0;
+                padding: 5px;
+            }
+            button {
+                background-color: transparent;
+                border: none;
+                cursor: pointer;
+            }
+        }
+    }
+    .y-tappay-bottom {
+
     }
 }
