--- a/src/06-event/components/left/left.scss
+++ b/src/06-event/components/left/left.scss
@@ -43,7 +43,6 @@ html {
 body {
   background-color: $colorWhite;
 
-  cursor: url(./../../svg/green-auto.svg),auto;
 }
 .j-left-wrap {
   position: fixed;
@@ -89,7 +88,7 @@ body {
           }
         }
         div {
-          cursor:url(./../../svg/green-pointer.svg), pointer;
+          cursor: pointer;
           width: 240px;
           font-size: 2.3rem;
           color: $colorWhite;
