--- a/src/06-event/components/right/Timetable.scss
+++ b/src/06-event/components/right/Timetable.scss
@@ -231,7 +231,7 @@ $colorLine: #cecece;
           // outline: 1px solid black;
           // background-color: $colorWhite;
           // transition: .3s;
-          cursor:url(./../../svg//green-pointer.svg) ,pointer;
+          cursor:pointer;
           margin: auto;
           margin-top: 12px;
           width: 230px;
@@ -310,7 +310,7 @@ $colorLine: #cecece;
         //   outline: 2px solid green;
         // }
         .j-saveBtn {
-          cursor:url(./../../svg/green-pointer.svg) ,pointer;
+          cursor:pointer;
           position: absolute;
           bottom: 5%;
           // right: calc(7% + 8px);
