--- a/src/03-shop/styles/03-shop-list.scss
+++ b/src/03-shop/styles/03-shop-list.scss
@@ -134,7 +134,7 @@ $card-btn: #80b938;
 }
 
 @media (max-width: 390px) {
-  .r-container {
+  .r-shop-container {
     .r-main-visual {
       display: block;
       .r-side-bar {
