--- a/src/00-homepage/styles/Homepage.scss
+++ b/src/00-homepage/styles/Homepage.scss
@@ -96,9 +96,12 @@ $main-border-radius: 8px;
     z-index: 2;
 
     .y-section-news-first {
-      display: block;
+      position: relative;
+      display: flex;
+      align-items: flex-end;
       overflow: hidden;
       width: 100%;
+      height: 20px;
       background-color: $bgc-yellow;
     }
   }
