--- a/src/02-forum/styles/Card.scss
+++ b/src/02-forum/styles/Card.scss
@@ -35,7 +35,8 @@ $p:16px;
     h3{
         color: $main-blue;
         font-size: 24px;    
-        margin: 20px 0 0 0  ;                 
+        margin: 20px 0 0 0  ;   
+        font-weight: 800;              
     }
 
     }   
@@ -43,10 +44,12 @@ $p:16px;
         display: flex;
         justify-content: space-between;
         margin-top: 30px; ;
-        .card-member{
-           
+        .p-card-member{
+            .p-card-mb{
+                margin-right:5px ;
+            }
            p{
-            font-size: 12px;
+            font-size: $p;
             color: $main-text;
             margin: 0;
             }  
@@ -121,7 +124,7 @@ $p:16px;
         }
         p{
             margin: 0;
-            font-size:8px;
+            font-size:12px;
         }
     }
     .p-day-wrap{
@@ -147,4 +150,63 @@ $p:16px;
    }
 }
 
+
+
+@media (max-width:391px){
+    .p-crad-h{
+        height: auto; 
+        width: 200px;
+        background-color: #FFF3CB;
+        padding: 15px;
+        .p-card-title{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: -0px;
+        font-weight: 800;
+         .p-img-div{
+        height: 130px;
+        width: 100%;
+        margin-top: 10px; 
+        // border: 2px solid black;
+        overflow: hidden;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;     
+            }
+        }
+        h3{
+            color: $main-blue;
+            font-size: 15px;    
+            margin: 15px 0 0 0  ;   
+            font-weight: 800;              
+        }
+    
+        }   
+        .p-card-play{
+            display: flex;
+            justify-content: space-between;
+            margin-top: 30px; 
+            
+            .p-card-member{
+                .p-card-mb{
+                    margin-right:5px ;
+                }
+               p{
+                font-size: 5px;
+                color: $main-text;
+                margin: 0;
+                }  
+            }
+            .p-icon-arrow{
+                height: 20px;
+                // border: 1px solid cadetblue;
+                img{
+                    height: 100%;
+                }
+            }
+        }
+    }
+}
 
