--- a/src/02-forum/styles/ForumHome.scss
+++ b/src/02-forum/styles/ForumHome.scss
@@ -20,9 +20,9 @@ $p:16px;
         overflow: hidden;
               
     }
-    // .p-homeCardWrap > * {
-    //     break-inside: avoid;
-    //   }
+    .p-homeCardWrap > * {
+        break-inside: avoid;
+      }
     .p-homeBar{
         width: 70%;
         background-color: $main-blue;
@@ -36,9 +36,52 @@ $p:16px;
         h3{
             padding: 20px;
             color: white;
+            font-weight: 800;
         }
 
 
     }
     
+}
+
+@media (max-width:391px){
+    .p-home{
+        position: relative;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        .p-homeCardWrap{
+            width: 150%;
+            height: auto;
+            // display: column;
+            // columns: 4;
+            // column-gap: 300;
+            display: flex;
+            flex-wrap: wrap ;
+            overflow: hidden;
+                  
+        }
+        // .p-homeCardWrap > * {
+        //     break-inside: avoid;
+        //   }
+        .p-homeBar{
+            width: 100%;
+            background-color: $main-blue;
+            display: flex;
+            justify-content: space-around;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            color: white;
+            font-size: $p;
+            h3{
+                padding: 15px;
+                color: white;
+                font-weight: 800;
+            }
+    
+    
+        }
+        
+    }
 }
