--- a/src/02-forum/styles/Side_bar.scss
+++ b/src/02-forum/styles/Side_bar.scss
@@ -81,7 +81,7 @@ $p:16px;
     .p-side-bar{
         display: block;
         align-items:flex-start;
-        width: 391px;
+        width: 100%;
         height: 100%;
         .p-side-bar-button{
         display: flex;
@@ -96,8 +96,8 @@ $p:16px;
             align-items: center;
              
          .p-imgWrap{
-            width: 35px;
-            height: 35px;
+            width: 30px;
+            height: 30px;
             border-radius: 30%;
             background-color:#FFE6B4 ;
             display: flex;
@@ -122,11 +122,33 @@ $p:16px;
             margin: 10px 0 0 0;
             display: none;
         }
+        .p-activPage{
+            width: 40px;
+            height: 40px;
+            border-radius: 20%;
+            background-color:none;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 5px 0 0 0;
+        }
+        .p-activImg{
+            width: 90%;
+            height: 90%;
+           object-fit:fill;
+        }
         }
         .p-btnBook{
                 display: block;
+                width: 30px;
+                height: 30px;
+            img{
+                width: 100%;
+                height: 100%;
+            }
                 
             }
+         
     }
     
     }
