--- a/src/02-forum/styles/InnerCook.scss
+++ b/src/02-forum/styles/InnerCook.scss
@@ -107,7 +107,7 @@ $p:16px;
                     }
                 }
                 h4{
-                    font-size: $h4;
+                    font-size: $p;
                     color: $main-blue;
                     line-height: 150%;
                     span{
@@ -278,5 +278,292 @@ $p:16px;
        
     }
  
+}
+@media (max-width:391px){
+    .innerCook{
+        display: flex;
+        position: relative;
+        width: 100%;
+        height: 100%;
+        .sidBar{
+        width: 100%;
+        position:fixed;
+        bottom: 0;
+        z-index: 10;
+        }
+        .p-cookContainer{
+        max-width: 100%;
+        position: relative;
+        left: 0%;
+        margin-top: 100px;
+        .p-cookTitle{
+        padding: 20px;
+        .p-cookH1AdIcon{
+            display: flex;
+            justify-content: space-between;
+           h1{
+            font-size:$h2;
+            color: $main-blue;
+            letter-spacing: 5px;
+            font-weight: 800;
+            
+        }
+        .p-saveIcon{
+            width: 35px;
+            img{
+                width: 100%;
+            }
+        } 
+        }
+        
+        .p-cookTagWrap{
+            display: flex;
+            margin-top: 10px;
+        }
+        .p-cookMemberWrap{
+            margin-top: 20px;
+    
+        }
+        }
+    
+        .p-imgAdContet{
+        width: 100%;
+        margin-top: 50px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+        .p-innerImgWrap{
+            width: 390px;
+            height: 100%;
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+        p{
+            font-size:$p;
+            color: $main-text;
+            margin-top: 20px;
+            width: 390px;
+            padding: 15px;
+            line-height: 150%;
+            letter-spacing: 5px;
+        }
+        }   
+        .p-instAdTimAdServ{
+        width: 390px;
+        height: 500px;
+        background: url() no-repeat center  ;
+        background-size:contain;
+        padding:10px 20px;
+        display: flex;
+        flex-direction: row;
+        margin-top: 50px;
+        letter-spacing: 5px;
+            .p-timeAdServ{
+                width: 30%;
+                display: flex;
+                flex-direction:column;
+                justify-content: center;
+                margin-right: 50px;
+                .p-timeWrap{
+                    width: 130px;
+                    height: 0%;
+                    display: flex;
+                    align-items: center;
+                    margin-bottom: 50px;
+                    .p-timeIcon{
+                        width: 45px;
+                        margin-right: 5px;
+                        img{
+                            width: 90%;
+                            object-fit:contain;
+                        }
+                    }
+                    h4{
+
+                        font-size: 14px;
+                        color: $main-blue;
+                        line-height: 150%;
+                        span{
+                            display: flex;
+               
+                        }
+                    }
+                }
+                .p-servingWrap{
+                    display: flex;
+                    align-items: center;
+                    .p-servingIcon{
+                        width: 45px;
+                        margin-right: 5px;
+                        img{
+                            width: 100%;
+                            object-fit: contain;
+                        }
+                    }
+                    h4{
+                        font-size: 14px;
+                        color: $main-blue;
+                        line-height: 150%;
+                        span{
+                            
+                            display: flex;
+                        }
+                    }
+                }
+            }
+            .p-instAdTitle{
+               width: 100%;
+               
+                h3{
+                    font-size: $h4;
+                    color: $main-yellow;
+                }
+                ul{
+                    width: 100%;
+                    margin-top: 10px;
+                    display: flex;
+                    flex-wrap: wrap;
+                    flex-direction: column;
+                    
+                    // justify-content: space-between;
+                    
+                    li{
+                        width: 100%;
+                        display: flex;
+
+                        justify-content: space-between;
+                        padding: 20px 10px 0 0;
+                         p{
+                        font-size: $p;
+                        color: $main-text;
+                    }
+                    }
+                   
+                }
+            }
+        }
+        .p-stepWrap{
+        margin-top: 100px;
+        .p-step{
+            width: 390px;
+            display: flex;
+            flex-direction: column;
+            border-top: 2px solid $main-blue;
+            padding: 30px 0;
+            .p-stepImg{
+                width: 390px;
+                height: 260px;
+                margin-right: 30px;
+                img{
+                    width: 100%;
+                    height: 100%;
+                    // object-fit:cover;
+                }
+            }
+            .p-stepContent{
+                letter-spacing: 5px; 
+                padding: 20px 20px 0 20px;   
+                h3{
+                    font-size: $h3;
+                    font-weight: 800;
+                    color: $main-blue;
+                }
+                h4{
+                    font-size: $p;
+                    color: $main-text;
+                    margin-top: 20px;
+                    line-height: 150%;
+                    
+                }
+            }
+        }
+        }
+        .p-PS{
+            padding: 20px;
+            background-color: $main-yellow;
+            border: 3px solid $main-blue;
+            display: flex;
+            align-items: center;
+            margin-top: 30px;
+            letter-spacing: 5px;
+            h2{
+               width: 20%;
+                font-size: $h4;
+                color: $main-blue;
+        
+            }
+            h4{
+                font-size: $p;
+                color: white;
+                line-height: 150%;
+            }
+        }
+        .p-commentWrap{
+            width: 100%;
+            margin-top: 100px;
+            .p-commentTitle{
+                border-top: 2px solid $main-text;
+                padding-top: 20px;
+                h3{
+                    padding: 0 20px;
+                    color: $main-blue;
+                    font-size: $h3;
+                    font-weight: 800;
+                }
+            }
+           .p-commentForm{
+            padding: 0 20px;
+           width: 100%;
+           }
+        }
+        .p-commMessage{
+            margin-bottom: 200px;
+            padding: 0 20px;
+        }
+        }
+        .p-checkAdWrit{
+            display: none;
+            flex-direction: column;
+            align-items: center;
+            position: fixed;
+            left: 83%;
+            bottom: 10%;
+            .p-checkStep{
+            width: 230px;
+            background-color: $main-yellow;
+            border: 2px solid $main-blue;
+            letter-spacing: 5px;
+            line-height: 300%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 10px;
+            span{
+                width: 100%;
+                display: flex;
+                justify-content: center;
+            input{
+                width: 25px;
+                margin-right: 20px;
+            }
+            h3{
+                color: $main-blue;
+                font-size: $h3;
+                font-weight: 800;
+            } 
+            }
+        
+            }
+            .p-writWrap{
+                margin-top: 30px;
+            }
+           
+        }
+     
+    }
 }
 
