--- a/src/02-forum/styles/PostCook.scss
+++ b/src/02-forum/styles/PostCook.scss
@@ -10,7 +10,7 @@ $p-size:16px;
    display: flex;
    width: 100%;
    position:relative;
-   margin-top: 20px;
+   //margin-top: 20px;
    .p-sideBarWrap{
      position:fixed;
    }
@@ -23,10 +23,10 @@ $p-size:16px;
     position: relative;
     left: 18%;
     .p-searchBarWrap{
-      // width: 100%;
+      width: 100%;
     }
     .p-tabCookWrap{
-      // width: 100%;
+      width: 100%;
     }
     .p-CardWrap{
       width: 100%;
@@ -82,10 +82,16 @@ $p-size:16px;
      flex-wrap: wrap;
      flex-direction:row;
      justify-content: center;
-     margin-top: 50px;
+     margin-top: 80px;
      position: relative;
      left: 0;
      right: 0;
+     .p-searchBarWrap{
+       width: 80%;
+    }
+    .p-tabCookWrap{
+      width: 80%;
+    }
 
      .p-CardWrap{
        width: 100%;
