--- a/src/02-forum/styles/WriteForm.scss
+++ b/src/02-forum/styles/WriteForm.scss
@@ -13,6 +13,8 @@ $p-m:10px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
+    margin-bottom: 100px;
 form{
     width: 65%;
     display: flex;
@@ -250,9 +252,17 @@ form{
 
     }
    .p-writeData{
-    width: 100%;
-    height: 100px;
+    animation: backwards;
+    width: 50px;
+    height: 60px;
     background-color:white;
+    position: fixed;
+    top: 30%;
+    right: 50px;
+    img{
+    width: 100%;
+    height: 100%;
+    }
 
    }
 }
