--- a/src/00-homepage/styles/ShopHome.scss
+++ b/src/00-homepage/styles/ShopHome.scss
@@ -302,5 +302,12 @@ $title-text: rgb(190, 174, 146);
         margin-bottom: 10px;
       }
     }
+    .r-shop-slider {
+      .r-shop-home-slider-inner1 {
+        .r-shop-home-slider-inner1-span {
+          font-size: 20px;
+        }
+      }
+    }
   }
 }
